--- a/frontend/src/components/mainNavBar.css
+++ b/frontend/src/components/mainNavBar.css
@@ -1,19 +1,20 @@
 header div {
   display: flex;
-  margin-left: 80.9%;
+
   align-items: center;
 }
 .logoSkyer {
-  width: 5%;
-  height: 5%;
+  width: 5rem;
+  height: 5rem;
 }
 .secondNav ul {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .mainNavBar nav {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 .mainNavBar ul {
   border-style: solid;
@@ -27,7 +28,7 @@ header div {
 }
 
 .mainNavBar li {
-  margin: 20px;
+  margin: 1.5rem;
 }
 
 .mainNavBar a {
@@ -42,7 +43,21 @@ header div {
 
 #categoriesNav {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; /* Don't need it  */
   border-style: none;
-  margin-left: 20%;
   padding: 0;
+}
+
+li {
+  display: flex;
+  justify-content: space-between; /* space-around to fix but it wraps to center  */
+  flex: 10.8%;
+}
+@media screen and (max-width: 806px) {
+  li {
+    display: flex;
+    justify-content: space-between;
+    flex: 15%;
+  }
 }
