--- a/frontend/src/components/ImageSlider.css
+++ b/frontend/src/components/ImageSlider.css
@@ -31,24 +31,35 @@
 
 .right-arrow {
   position: absolute;
-  top: 50%;
+  top: 45%;
   right: 32px;
   font-size: 3rem;
-  color: #000;
+  color: rgba(0, 0, 0, 0.616);
   z-index: 10;
   cursor: pointer;
   user-select: none;
+  transition: 0.5s ease;
+  opacity: 0.3;
+}
+.right-arrow:hover {
+  color: #000;
+  opacity: 1;
 }
 
 .left-arrow {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 32px;
   font-size: 3rem;
-  color: #000;
+  color: rgba(0, 0, 0, 0.616);
   z-index: 10;
   cursor: pointer;
   user-select: none;
+  opacity: 0.3;
+}
+.left-arrow:hover {
+  color: #000;
+  opacity: 1;
 }
 
 .slide {
