--- a/frontend/src/pages/SportsCollections.css
+++ b/frontend/src/pages/SportsCollections.css
@@ -9,17 +9,16 @@ body {
   height: 100vh;
 }
 
-.containerImage {
+#containerImage {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+
   padding: 20px;
   justify-content: space-between;
-  background-color: lightgrey;
-  border: 8px solid black;
+
+  border-bottom: 8px solid black;
   width: 90%;
   margin: auto;
-  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.39);
 }
 
 .homeImage {
@@ -39,12 +38,12 @@ body {
   display: flex;
 }
 
-.shopNow {
+#explore {
   padding: 0.35em 1.2em;
   border: 0.2em solid black;
-  margin: 0 0.3em 0.3em 43em;
+  margin-top: 200px;
+
   border-radius: 0.12em;
-  box-sizing: border-box;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
   font-weight: bolder;
@@ -53,17 +52,20 @@ body {
   transition: all 0.2s;
   background-color: black;
 }
-.shopNow:hover {
+#explore:hover {
   color: #000000;
   background-color: #ffffff;
   border: 0.2em solid black;
+}
+.Category1p {
+  justify-content: center;
 }
 
 @media all and (max-width: 50em) {
   .shopNow-Container {
     display: flex;
   }
-  .shopNow {
+  #explore {
     display: block;
     margin: 0.5em 22.5em;
   }
@@ -76,7 +78,7 @@ body {
 }
 
 @media all and (max-width: 60em) {
-  .shopNow {
+  #explore {
     background-color: black;
     display: block;
     margin: 10em 10em;
@@ -85,7 +87,7 @@ body {
 }
 
 @media all and (max-width: 30em) {
-  .shopNow {
+  #explore {
     display: block;
     margin: 0.4em 10em;
   }
@@ -96,16 +98,7 @@ body {
 .container-box-Image {
   position: relative;
 }
-.overlay {
-  transition: 0.5s ease;
-  opacity: 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
-}
+
 .homeImage-overlay-button {
   background-color: #04aa6d;
   color: white;
