--- a/frontend/src/pages/Category_3.css
+++ b/frontend/src/pages/Category_3.css
@@ -1,13 +1,13 @@
 * {
-  padding: 0;
-  margin: 0;
+	padding: 0;
+	margin: 0;
 }
 
-.Category {
+/* .Category {
   display: flex;
   flex-wrap: wrap;
 }
 
 .Category div {
   flex: 50%;
-}
+} */
