--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -101,7 +101,7 @@
 	.nav-menu {
 		display: flex;
 		flex-direction: column;
-		width: 100%;
+		width: 100vh;
 		height: 90vh;
 		position: absolute;
 		top: 80px;
