--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
 	position: fixed;
-	width: 100%;
+	width: 100vh;
 	z-index: 5;
 	background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
 	height: 80px;
@@ -86,7 +86,7 @@
 }
 .user-png {
 	width: 1%;
-	margin: 0 10% 0 0;
+	margin: 0 0 0 0;
 }
 
 @media screen and (max-width: 960px) {
