--- a/frontend/src/components/SlideShow.css
+++ b/frontend/src/components/SlideShow.css
@@ -1,41 +1,41 @@
 .slideshow {
-  margin: 0 auto;
-  overflow: hidden;
-  max-width: 500px;
+	margin: 0 auto;
+	overflow: hidden;
+	max-width: 500px;
 }
 
 .slideshowSlider {
-  white-space: nowrap;
-  transition: ease 1000ms;
+	white-space: nowrap;
+	transition: ease 1000ms;
 }
 
 .slide-show {
-  display: inline-block;
+	display: inline-block;
 
-  height: 400px;
-  width: 100%;
-  border-radius: 40px;
+	height: 400px;
+	width: 100vw;
+	border-radius: 40px;
 }
 
 /* Buttons */
 
 .slideshowDots {
-  text-align: center;
+	text-align: center;
 }
 
 .slideshowDot {
-  display: inline-block;
-  height: 10px;
-  width: 10px;
+	display: inline-block;
+	height: 10px;
+	width: 10px;
 
-  border: 1.6px solid rgba(255, 255, 255, 0.808);
-  cursor: pointer;
-  margin: 15px 7px 0px;
+	border: 1.6px solid rgba(255, 255, 255, 0.808);
+	cursor: pointer;
+	margin: 15px 7px 0px;
 
-  background-color: none;
+	background-color: none;
 }
 
 .slideshowDot.active {
-  padding: 1px;
-  background-color: rgba(255, 255, 255, 0.815);
+	padding: 1px;
+	background-color: rgba(255, 255, 255, 0.815);
 }
