--- a/frontend/src/pages/Home2.css
+++ b/frontend/src/pages/Home2.css
@@ -10,6 +10,11 @@ body {
 	width: 100vw;
 	height: 100vh;
 }
+html {
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
+}
 
 .containerImage {
 	display: flex;
