--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
 	position: fixed;
-	width: 100vh;
+	width: 100vw;
 	z-index: 5;
 	background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
 	height: 80px;
