--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -204,7 +204,7 @@ footer {
 	.footer-distributed .footer-center,
 	.footer-distributed .footer-right {
 		display: block;
-		width: 100vw;
+		width: 100%;
 		margin-bottom: 40px;
 		text-align: center;
 	}
