--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -92,11 +92,11 @@
 }
 
 @media screen and (max-width: 960px) {
-	.desktop {
+	.nav-menu.active.desktop {
 		display: none;
 	}
 	.mobile {
-		display: initial;
+		display: block;
 	}
 	.NavbarItems {
 		position: relative;
