--- a/frontend/src/pages/Home2.css
+++ b/frontend/src/pages/Home2.css
@@ -136,6 +136,9 @@ h3 span {
 		margin: 10em 10em;
 		height: 50px;
 	}
+	.btn2 {
+		margin: 20% 0;
+	}
 }
 
 @media all and (max-width: 30em) {
@@ -143,6 +146,7 @@ h3 span {
 		display: block;
 		margin: 0.4em 10em;
 	}
+
 	.homeImage3 {
 		display: none;
 	}
