--- a/frontend/src/pages/Football.css
+++ b/frontend/src/pages/Football.css
@@ -1,4 +1,5 @@
 .blocks {
+	width: 70%;
 }
 .div-links {
 	padding-top: 5%;
@@ -12,7 +13,7 @@
 	list-style: none;
 }
 .basthis {
-	font-size: 25%;
+	font-size: 50%;
 }
 .div-links li {
 	flex: 10%;
@@ -58,4 +59,12 @@ button {
 .cont {
 	width: 50%;
 	border: 1px solid black;
+}
+@media screen and (max-width: 60em) {
+	.blocks {
+		width: unset;
+	}
+	.basthis {
+		font-size: 25%;
+	}
 }
